# magetools

./: .gitignore  404.html  CHANGELOG.md  README.md  RELEASE_NOTES.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
docs/: index.md
docs/user_guide/: best_practices.md  cli.md  core_concepts.md  getting_started.md  security.md
example/.magetools/example_book/: tools2.py
example/.magetools/example_grim/: tools1.py
reference/adapters/: index.html
reference/config/: index.html
reference/grimorium/: index.html
reference/spellsync/: index.html
search/: search_index.json
src/magetools/: __init__.py  __main__.py  adapters.py  grimorium.py  spellsync.py
tests/: test_adapters.py  test_config.py  test_grimorium.py  test_spellsync_full.py
user_guide/best_practices/: index.html
user_guide/cli/: index.html
user_guide/core_concepts/: index.html
user_guide/getting_started/: index.html
user_guide/security/: index.html
